AC_INIT([eselect-kotlin], [0.0.1], [liaoyuan@gmail.com],
        [eselect-kotlin], [https://github.com/Leo3418/eselect-kotlin])
AM_INIT_AUTOMAKE([-Wall foreign no-dist-gzip dist-bzip2])

AC_SUBST(EPREFIX)

# Create output files.
AC_CONFIG_FILES([Makefile kotlin.eselect run-kotlin-tool.sh])

AC_OUTPUT
