AC_INIT([eselect-kotlin], [0.1.0], [liaoyuan@gmail.com],
        [eselect-kotlin], [https://github.com/Leo3418/eselect-kotlin])
AM_INIT_AUTOMAKE([-Wall foreign no-dist-gzip dist-bzip2])

AC_PROG_LN_S
AC_PROG_MKDIR_P

AC_ARG_VAR([EPREFIX], [Gentoo Prefix offset])

# Create output files.
AC_CONFIG_FILES([Makefile kotlin.eselect run-kotlin-tool.sh])

AC_OUTPUT
